Can now search AbstractConfigurables